Added JDK 25 support, clarified usage, updated execution paths, fixed project declaration as a package. Enhancements include stateless lead queue, task mapping optimizations, and fixed queue pressure.